# demo-kahoot-clone-supergraph

./: .gitignore  README.md  package-lock.json
.github/: renovate.json
apollo_router/: Procfile  package.json  player_schema.graphql  router-config-prod.yaml  router-config.yaml  rover.yaml  supergraph.graphql
quiz_subgraphs_rs/player/: Cargo.toml  README.md
quiz_subgraphs_rs/player/src/: models.rs
quiz_subgraphs_rs/player_0/: Cargo.toml
quiz_subgraphs_rs/player_0/src/: main.rs  models.rs
quiz_subgraphs_rs/player_1/: Cargo.toml
quiz_subgraphs_rs/player_1/src/: main.rs  models.rs
quiz_subgraphs_rs/quiz/: Cargo.toml  data.json
quiz_subgraphs_rs/quiz/src/: models.rs
quiz_subgraphs_rs/quiz_0/: Cargo.toml
quiz_subgraphs_rs/quiz_0/src/: main.rs  models.rs
quiz_subgraphs_rs/quiz_1/: Cargo.toml
quiz_subgraphs_rs/quiz_1/src/: main.rs  models.rs
quiz_subgraphs_ts/player/: README.md  package-lock.json  package.json
quiz_subgraphs_ts/player/src/: player.ts
quiz_subgraphs_ts/player_0/: README.md  package-lock.json  package.json
quiz_subgraphs_ts/player_0/src/: player.ts
quiz_subgraphs_ts/player_1/: package.json
quiz_subgraphs_ts/player_1/src/: player.ts
quiz_subgraphs_ts/quiz/: package-lock.json  package.json  quiz.graphql  tsconfig.json
quiz_subgraphs_ts/quiz/src/: quiz.ts
quiz_subgraphs_ts/quiz_0/: package-lock.json  package.json  quiz_data.json
quiz_subgraphs_ts/quiz_0/src/: quiz.ts
quiz_subgraphs_ts/quiz_1/: README.md  package-lock.json  package.json
quiz_subgraphs_ts/quiz_1/src/: quiz.ts
