[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.25"
async-stream = "0.3.3"
slab = "0.4.7"
futures-channel = "0.3.25"
once_cell = "1.17.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["compression-br", "compression-gzip", "cors"] }
tower-service = "0.3"
async-trait = "0.1.64"
axum = { version = "0.6.4", default-features = false, features = ["headers"] }
headers = "0.3.8"
http = "0.2.8"
hyper = {version = "0.14", features = ["client"]}
urlencoding = "2.1.2"
serde_json = "1.0.66"
bytes = "1.5.0"
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
